[package]
name = "rust-new"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
dotenvy = "0.15" 
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
